--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,6 @@
 
 .active {
   color: #fff !important;
- 
 }
 
 .navbar-brand {
@@ -50,21 +49,19 @@
 }
 
 .search-form {
-  margin-right: 8px;
   margin-top: 4px;
 }
 
 .search-box-btn {
   display: flex;
   align-items: center;
-  margin-right: 120px;
 }
 
 .search-form input {
   width: 280px;
   border: none;
   border-radius: 50px;
-  font-size: 14px !important;
+  font-size: 14px;
 }
 
 .btn-search {
@@ -89,9 +86,8 @@
   color: white;
 }
 
-
-
 .footer {
+  margin-top: 100px;
   color: white;
   padding: 10px 0 1px 0;
   background-color: #2c2317;
@@ -169,9 +165,8 @@
   color: white;
 }
 
-
 .dashboard {
-  margin-top: 100px !important;
+  margin-top: 100px;
 }
 
 .dashboard-menu h4 {
@@ -179,7 +174,6 @@
   color: white;
   padding: 20px 0px;
 }
-
 
 .studymaterial-name {
   font-size: 22px;
